# Chores

./: .dockerignore  .gitignore  Dockerfile
backend/: Dockerfile  Pipfile  app.py  chores.json  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/static/: index.html  main.js
deploy/: gunicorn.conf  nginx.conf  start.sh
frontend/: elm.json
frontend/src/: chores.elm
