[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend of chores handling http requests"
authors = ["Pierre-Jean Vincent <pierre-jean.vincent@medigo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.48.0"
uvicorn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
mypy = "^0.761"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
